[project]
name = "audiblez"
version = "0.1.9"
description = "Generate audiobooks from e-books (epub to wav/m4b)"
authors = [
    { name = "Claudio Santini", email = "hireclaudio@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.9,<3.13" # librosa/llvmlite have no support for python > 3.12
dependencies = [
    "beautifulsoup4 >= 4.12.3",
    "EbookLib >= 0.18",
    "kokoro-onnx >= 0.2.7",
    "pydub >= 0.25.1",
    "soundfile >= 0.13.0",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.urls]
Homepage = "https://claudio.uk/posts/epub-to-audiobook.html"
Documentation = "https://github.com/santinic/audiblez"
Repository = "https://github.com/santinic/audiblez"
Issues = "https://github.com/santinic/audiblez/issues"

[project.scripts]
audiblez = "audiblez:cli_main"
